fix uneven background blur when 'form' is opened

--- a/css/main.css
+++ b/css/main.css
@@ -319,7 +319,7 @@ form div i {
   margin-top: 10px;
 }
 
-body {
+.main-content {
   padding: 8px;
 }
 
